--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Carlos Chacon
+#bio: A Man who travels the world eating noodles
+bio: Some guy of Costa Rica
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: A blog about my daily rants and other stuff
 
 # if it's an external image, update below for true
 # better with square images
@@ -12,7 +13,7 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
@@ -34,21 +35,21 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+#facebook: myfacebook
+twitter: "@caedocha"
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: caedocha
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+medium: caedocha
 # vimeo: myvimeo
-email: myemail@gmail.com
+email: caedo.00@gmail.com
 
 authors:
     johndoe:
@@ -74,11 +75,13 @@ width: normal
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
-blog: true
+blog: false
+reading_list: true
+
 
 # do you want to show the "read time" of the posts?
 read-time: true
