--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ projects: false
 
 # if you don't need "about" or "blog", comment them out below
 about: true
-blog: false
+blog: true
 reading_list: true
 
 
