Fix typo in author description

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # main text of home
 name: Carlos Chacon
 #bio: A Man who travels the world eating noodles
-bio: Some guy of Costa Rica
+bio: Some guy from Costa Rica
 
 # twitter summary info
 description: A blog about my daily rants and other stuff
